[package]
name = "bifrost-integration-tests"
version = "0.8.0"
authors = ["hqwangningbo <2536935847@qq.com>"]
edition = "2021"

[dev-dependencies]
bifrost-asset-registry        = { workspace = true }
bifrost-currencies            = { workspace = true }
bifrost-polkadot-runtime      = { workspace = true }
bifrost-primitives            = { workspace = true }
bifrost-runtime-common        = { workspace = true }
bifrost-slp                   = { workspace = true }
bifrost-vtoken-voting         = { workspace = true }
bifrost-xcm-interface         = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-primitives-core       = { workspace = true }
env_logger                    = { workspace = true }
frame-support                 = { workspace = true }
frame-system                  = { workspace = true }
hex-literal                   = { workspace = true }
log                           = { workspace = true }
orml-tokens                   = { workspace = true }
orml-traits                   = { workspace = true }
orml-xtokens                  = { workspace = true }
pallet-assets                 = { workspace = true }
pallet-balances               = { workspace = true }
pallet-conviction-voting      = { workspace = true }
pallet-message-queue          = { workspace = true }
pallet-referenda              = { workspace = true }
pallet-staking                = { workspace = true }
pallet-xcm                    = { workspace = true }
parachain-info                = { workspace = true }
parachains-common             = { workspace = true }
parity-scale-codec            = { workspace = true }
polkadot-core-primitives      = { workspace = true }
polkadot-parachain-primitives = { workspace = true, features = ["std"] }
polkadot-runtime-common       = { workspace = true, features = ["std"] }
polkadot-runtime-parachains   = { workspace = true, features = ["std"] }
scale-info                    = { workspace = true }
serde                         = { workspace = true }
sp-core                       = { workspace = true }
sp-io                         = { workspace = true }
sp-runtime                    = { workspace = true }
sp-staking                    = { workspace = true }
sp-std                        = { workspace = true }
xcm                           = { workspace = true }
xcm-builder                   = { workspace = true }
xcm-emulator                  = { workspace = true }
xcm-executor                  = { workspace = true }
xcm-simulator                 = { workspace = true }
