[package]
name = "node-primitives"
version = "0.1.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
parity-codec = { version = "4.1.1", default-features = false, features = ["derive"] }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }

[dev-dependencies]
substrate-serializer = { git = "https://github.com/paritytech/substrate" }
pretty_assertions = "0.5"

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"primitives/std",
	"rstd/std",
	"sr-primitives/std",
	"serde",
]
