[package]
name = "node-rpc-client"
version = "0.1.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6"
futures = "0.1.26"
hyper = "0.12"
jsonrpc-core-client = { version = "13.1.0", features = ["http", "ws"] }
log = "0.4"
node-primitives = { path = "../primitives" }
substrate-rpc = { git = "https://github.com/paritytech/substrate", version = "2.0.0" }
