[package]
name = "node-rpc"
version = "0.1.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"

[dependencies]
client = { package = "substrate-client", git = "https://github.com/paritytech/substrate" }
jsonrpc-core = "13.2.0"
jsonrpc-core-client = "13.2.0"
jsonrpc-derive = "13.2.0"
jsonrpc-pubsub = "13.2.0"
keyring = { package = "substrate-keyring", git = "https://github.com/paritytech/substrate" }
log = "0.4"
node-primitives = { path = "../primitives" }
codec = { package = "parity-scale-codec", version = "1.0.0" }
serde = { version = "1.0", features = ["derive"] }
sr-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
rpc-primitives = { package = "substrate-rpc-primitives", git = "https://github.com/paritytech/substrate" }
transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/paritytech/substrate" }

[dev-dependencies]
node-testing = { path = "../testing" }
node-runtime = { path = "../runtime" }
env_logger = "0.6"
