[package]
name = "node-runtime"
version = "0.1.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
integer-sqrt = { version = "0.1.2" }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
client = { package = "substrate-client", git = "https://github.com/paritytech/substrate", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-staking-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
authority-discovery-primitives = { package = "substrate-authority-discovery-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
version = { package = "sr-version", git = "https://github.com/paritytech/substrate", default-features = false }
support = { package = "srml-support", git = "https://github.com/paritytech/substrate", default-features = false }
authorship = { package = "srml-authorship", git = "https://github.com/paritytech/substrate", default-features = false }
babe = { package = "srml-babe", git = "https://github.com/paritytech/substrate", default-features = false }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate", default-features = false }
contracts = { package = "srml-contracts", git = "https://github.com/paritytech/substrate", default-features = false }
collective = { package = "srml-collective", git = "https://github.com/paritytech/substrate", default-features = false }
democracy = { package = "srml-democracy", git = "https://github.com/paritytech/substrate", default-features = false }
elections = { package = "srml-elections", git = "https://github.com/paritytech/substrate", default-features = false }
executive = { package = "srml-executive", git = "https://github.com/paritytech/substrate", default-features = false }
finality-tracker = { package = "srml-finality-tracker", git = "https://github.com/paritytech/substrate", default-features = false }
grandpa = { package = "srml-grandpa", git = "https://github.com/paritytech/substrate", default-features = false }
indices = { package = "srml-indices", git = "https://github.com/paritytech/substrate", default-features = false }
membership = { package = "srml-membership", git = "https://github.com/paritytech/substrate", default-features = false }
session = { package = "srml-session", git = "https://github.com/paritytech/substrate", default-features = false, features = ["historical"] }
staking = { package = "srml-staking", git = "https://github.com/paritytech/substrate", default-features = false }
system = { package = "srml-system", git = "https://github.com/paritytech/substrate", default-features = false }
timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate", default-features = false }
treasury = { package = "srml-treasury", git = "https://github.com/paritytech/substrate", default-features = false }
sudo = { package = "srml-sudo", git = "https://github.com/paritytech/substrate", default-features = false }
im-online = { package = "srml-im-online", git = "https://github.com/paritytech/substrate", default-features = false }
authority-discovery = { package = "srml-authority-discovery", git = "https://github.com/paritytech/substrate", default-features = false }
offences = { package = "srml-offences", git = "https://github.com/paritytech/substrate", default-features = false }
node-primitives = { path = "../primitives", default-features = false }
rustc-hex = { version = "2.0", optional = true }
serde = { version = "1.0", optional = true }
substrate-keyring = { git = "https://github.com/paritytech/substrate", optional = true }
substrate-session = { git = "https://github.com/paritytech/substrate", default-features = false }
brml-assets = { path = "../brml/assets", default-features = false }
brml-settlement = { path = "../brml/settlement", default-features = false }
brml-bridge = { path = "../brml/bridge", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.2", git = "https://github.com/paritytech/substrate" }

[features]
default = ["std"]
no_std = [
	"contracts/core",
]
std = [
	"authority-discovery-primitives/std",
	"authority-discovery/std",
	"authorship/std",
	"babe-primitives/std",
	"babe/std",
	"balances/std",
	"client/std",
	"codec/std",
	"collective/std",
	"contracts/std",
	"democracy/std",
	"elections/std",
	"executive/std",
	"finality-tracker/std",
	"grandpa/std",
	"im-online/std",
	"indices/std",
	"membership/std",
	"node-primitives/std",
	"offchain-primitives/std",
	"offences/std",
	"primitives/std",
	"rstd/std",
	"rustc-hex",
	"safe-mix/std",
	"serde",
	"session/std",
	"sr-primitives/std",
	"sr-staking-primitives/std",
	"staking/std",
	"substrate-keyring",
	"substrate-session/std",
	"sudo/std",
	"support/std",
	"system/std",
	"timestamp/std",
	"treasury/std",
	"version/std",
	"brml-assets/std",
	"brml-settlement/std",
	"brml-bridge/std",
]
