[package]
name = "xcm-support"
description = "Supporting module for XCM integration."
version = "0.8.0"
authors = ["Bifrost Developers"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
paste = "1.0.5"
smallvec = "1.6.1"
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.9", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.9", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.9", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.9", default-features = false }
orml-traits = { version = "0.4.1-dev", default-features = false }
node-primitives = { default-features = false, path = "../node/primitives" }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9"}
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9"}
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9"}
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.9"}
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.9" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.9" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.9" }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.9" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.9" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.9" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.9" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.9" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-system/std",
	"frame-support/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"orml-traits/std",
	"node-primitives/std",
	"cumulus-primitives-core/std",
]
