[package]
name = "xcm-support"
description = "Supporting module for XCM integration."
version = "0.8.0"
authors = ["Bifrost Developers"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
paste = "1.0.5"
smallvec = "1.6.1"
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.11", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.11", default-features = false }
node-primitives = { default-features = false, path = "../node/primitives" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-system/std",
	"frame-support/std",
	"xcm/std",
	"cumulus-primitives-core/std",
	"node-primitives/std",
]
