[package]
name = "brml-bridge-eos"
version = "0.1.0"
authors = ["Dengjianping <djptux@gmail.com>"]
edition = "2018"

[dependencies]
bridge = { package = "brml-bridge", path = "../bridge", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
eos-chain = { git = "https://github.com/bifrost-codes/rust-eos", branch = "use-rust-secp256k1", default-features = false }
eos-keys = { git = "https://github.com/bifrost-codes/rust-eos", branch = "use-rust-secp256k1", optional = true }
eos-rpc = { git = "https://github.com/bifrost-codes/rust-eos", branch = "use-rust-secp256k1", optional = true }
hex = { version = "0.4", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
inherents = { version = "2.0.0", package = "sp-inherents", git = "https://github.com/paritytech/substrate", default-features = false }
node-primitives = { path = "../../bin/node/primitives", default-features = false }
sp-core = { version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features = false }
sp-io = { version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features = false }
sp-runtime = { version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features = false }
sp-std = { version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features = false }
support = { package = "frame-support", git = "https://github.com/paritytech/substrate", default-features = false }
system = { package = "frame-system", git = "https://github.com/paritytech/substrate", default-features = false }
serde = { version = "1.0.101", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
substrate-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate" }

[features]
default = ["std"]
std = [
	"bridge/std",
	"codec/std",
	"eos-chain/std",
	"eos-keys/std",
	"eos-rpc/std",
	"hex/std",
	"inherents/std",
	"node-primitives/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"support/std",
	"system/std",
	"serde",
	"serde_json",
]
